# tolla

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
client/: Cargo.toml  Dockerfile  ca.pem  cert.pem  key.pem  settings.toml
client/src/: main.rs
mongodb/docker-alpine-mongo/: Dockerfile  run.sh
mongodb/docker-alpine-mongo/proxy/: main.go
report/: acronyms.tex  citations.bib  thesis.tex
rust-openssl/openssl/: Cargo.toml
rust-openssl/openssl-sys/: Cargo.toml
rust-openssl/openssl-sys/src/: lib.rs  ossl10x.rs  ossl110.rs
rust-openssl/openssl/src/x509/: mod.rs
src/: main.rs
tolla/: Cargo.toml  build.rs
tolla/protos/: messages.proto
tolla/src/: audit.rs  ca.rs  consent.rs  docker.rs  endpoints.rs  lib.rs  policy.rs  proxy.rs  register.rs
tolla/tests/: integration_test.rs
tolla_proto/: Cargo.toml  build.rs
tolla_proto/src/: lib.rs  messages.proto
