[package]
name = "lib_tolla"
version = "0.1.0"
authors = ["hoffa2 <helhof@online.no>"]
build = "build.rs"

[dependencies]
prost = "0.1.0"
prost-derive = "0.1.0"
mongodb = "0.3.3"
bson = "0.9.0"
bytes = "0.4"
futures = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-io = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

[build-dependencies]
prost-build = "0.1.0"
